cluster/tf-kube/k_etcd.tf
##
##	etcd instances
##

resource "aws_instance" "etcd" {
  count         = 3
  ami           = "${lookup(var.amis, var.region)}"
  instance_type = "${var.etcd_inst_type}"

  subnet_id                   = "${aws_subnet.kube.id}"
  private_ip                  = "${cidrhost(var.vpc_cidr, 10 + count.index)}"
  associate_public_ip_address = true
  availability_zone      = "${var.zone}"
  vpc_security_group_ids = ["${aws_security_group.kube.id}"]
  key_name               = "${var.default_keypair_name}"
  tags {
    Owner           = "${var.owner}"
    Name            = "etcd-${count.index}"
    ansibleFilter   = "${var.ansibleFilter}"
    ansibleNodeType = "etcd"
    ansibleNodeName = "etcd${count.index}"
  }
}
